force-app/main/default/objects/Sym_Case_Line_Item__c/Sym_Case_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Object created for POC/Project Symphony - Case_Line_Item__c is a custom object to hold line items records that are produced as a snapshot of the transaction</description>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000}</displayFormat>
        <label>Case Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>