force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Sym_Case__c</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>