force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Individual_Deductible_In_Network__c.field-meta.xml
<CustomField>
    <fullName>Individual_Deductible_In_Network__c</fullName>
    <label>Individual Deductible In-Network</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>