force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Sym_Annual_Premium__c</fullName>
    <label>Annual Premium</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>