force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Sym_Coinsurance__c</fullName>
    <label>Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>