force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Coinsurance_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Sym_Coinsurance_Pharmacy__c</fullName>
    <label>Coinsurance (Pharmacy Included)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>