force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Contract_Code__c.field-meta.xml
<CustomField>
    <fullName>Sym_Contract_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>