force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Deductible_Family__c.field-meta.xml
<CustomField>
    <fullName>Sym_Deductible_Family__c</fullName>
    <label>Deductible - Family</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>