force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Emergency_Room_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Emergency_Room_Copay__c</fullName>
    <label>Emergency Room - Co Pay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>