force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_In_Patient_Hosp_Coin__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Patient_Hosp_Coin__c</fullName>
    <label>In Patient Hospital - Co Insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>