force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Is_Sold__c.field-meta.xml
<CustomField>
    <fullName>Sym_Is_Sold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Is Sold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>