force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Maximum_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Sym_Maximum_Out_of_Pocket__c</fullName>
    <label>Maximum Out of Pocket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>