force-app/main/default/objects/Sym_Case_Line_Item__c/fields/sym_monthlyPremium__c.field-meta.xml
<CustomField>
    <fullName>sym_monthlyPremium__c</fullName>
    <label>Monthly Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>