force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Preventative_Drugs_Covered__c.field-meta.xml
<CustomField>
    <fullName>Sym_Preventative_Drugs_Covered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preventative Drugs Covered (Pharmacy)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>