force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Primary_Care_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Primary_Care_Copay__c</fullName>
    <label>Primary Care Copay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>