force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Sym_Product_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>