force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Rate_Single_Number__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rate_Single_Number__c</fullName>
    <label>Rate Single Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>