force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Rate_Two_Party__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rate_Two_Party__c</fullName>
    <label>Rate Two Party</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>