force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Sym_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendation</label>
    <type>Checkbox</type>
</CustomField>