force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Recommendation_Order__c.field-meta.xml
<CustomField>
    <fullName>Sym_Recommendation_Order__c</fullName>
    <label>Recommendation Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>