force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Recommendation_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommendation Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>