force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Rx_Network__c.field-meta.xml
<CustomField>
    <fullName>Sym_Rx_Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>