force-app/main/default/objects/Sym_Case_Line_Item__c/fields/Sym_Specialist_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Specialist_Copay__c</fullName>
    <label>Specialist Copay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>